# DiTaaS

./: .env.example  .gitignore  README.md  load_dataset.sh  main.py  mount_dataset.sh  pyproject.toml  start_train.sh
cli/: inference.py  list_run_ids.py  load_dataset.py  train_dit.py
src/: config.py
src/data/: sft_dataset.py
src/repositories/: mlflow.py
src/utils/: dit_model.py  dit_v2_model.py  model_archive.py  noise_scheduler.py
